@startuml DBModel

entity users {
  + id : integer <<PK>>
  --
  email : varchar <<UNIQUE, NOT NULL>>
  password_hash : varchar <<NOT NULL>>
  locale : varchar <<nullable>>
  created_at : datetime <<NOT NULL>>
}

entity products {
  + id : integer <<PK>>
  --
  name : varchar <<nullable>>
  url : varchar <<nullable>>
  category : varchar <<nullable>>
  image_url : varchar <<nullable>>
  created_at : datetime <<NOT NULL>>
}

entity tracking {
  + id : integer <<PK>>
  --
  user_id : integer <<FK, NOT NULL>>
  product_id : integer <<FK, NOT NULL>>
  is_active : boolean <<NOT NULL>>
  source : varchar <<nullable>>
  target_price : float <<nullable>>
  created_at : datetime <<NOT NULL>>
}

entity price_entries {
  + id : integer <<PK>>
  --
  product_id : integer <<FK, NOT NULL>>
  price : float <<NOT NULL>>
  created_at : datetime <<NOT NULL>>
}

entity notification_logs {
  + id : integer <<PK>>
  --
  tracking_id : integer <<FK, NOT NULL>>
  price_entry_id : integer <<FK, nullable>>
  channel : varchar <<NOT NULL>>
  recipient : varchar <<NOT NULL>>
  notified_price : float <<NOT NULL>>
  target_price : float <<NOT NULL>>
  notified_at : datetime <<NOT NULL>>
}

users ||--o{ tracking : owns
products ||--o{ tracking : tracked_as
products ||--o{ price_entries : has_prices
tracking ||--o{ notification_logs : emits
price_entries ||--o{ notification_logs : referenced_by

@enduml
